add styling to the template

--- a/uploads/template.html
+++ b/uploads/template.html
@@ -2,50 +2,72 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Resume</title>
+  <title>Resume - John Doe</title>
 </head>
-<body style="font-family: Arial, sans-serif; max-width: 800px; margin: 40px auto; padding: 20px; border: 1px solid #ccc; line-height: 1.6;">
+<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; max-width: 900px; margin: 40px auto; padding: 40px; background-color: #f9f9f9; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); color: #333;">
 
-  <h1 style="text-align: center; margin-bottom: 5px;">John Doe</h1>
-  <p style="text-align: center; color: gray; margin-top: 0;">Email: john.doe@example.com | Phone: (123) 456-7890 | Location: City, Country</p>
+  <header style="text-align: center; margin-bottom: 30px;">
+    <h1 style="font-size: 36px; margin-bottom: 5px;">John Doe</h1>
+    <p style="font-size: 16px; color: #555; margin: 0;">john.doe@example.com | (123) 456-7890 | City, Country</p>
+    <hr style="margin-top: 20px; border: none; border-top: 2px solid #ddd;" />
+  </header>
 
-  <hr style="margin: 20px 0;" />
+  <section style="margin-bottom: 30px;">
+    <h2 style="color: #2c3e50; font-size: 22px; border-left: 4px solid #3498db; padding-left: 10px;">Professional Summary</h2>
+    <p style="margin-top: 10px;">Detail-oriented and passionate Web Developer with 3+ years of experience in building responsive and accessible websites and applications. Strong background in modern JavaScript frameworks and full-stack development.</p>
+  </section>
 
-  <h2 style="color: #2c3e50; margin-bottom: 10px;">Summary</h2>
-  <p style="margin-top: 0;">Motivated and detail-oriented professional with a background in web development and software engineering. Passionate about building efficient and scalable web applications.</p>
+  <section style="margin-bottom: 30px;">
+    <h2 style="color: #2c3e50; font-size: 22px; border-left: 4px solid #3498db; padding-left: 10px;">Skills</h2>
+    <div style="display: flex; flex-wrap: wrap; gap: 15px; margin-top: 10px;">
+      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">HTML</span>
+      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">CSS</span>
+      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">JavaScript</span>
+      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">React</span>
+      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">Node.js</span>
+      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">MongoDB</span>
+      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">Git</span>
+      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">Docker</span>
+    </div>
+  </section>
 
-  <h2 style="color: #2c3e50; margin-bottom: 10px;">Skills</h2>
-  <ul style="margin-top: 0; padding-left: 20px;">
-    <li>HTML, CSS, JavaScript</li>
-    <li>React, Node.js, Express</li>
-    <li>MongoDB, SQL</li>
-    <li>Git, Docker, REST APIs</li>
-  </ul>
+  <section style="margin-bottom: 30px;">
+    <h2 style="color: #2c3e50; font-size: 22px; border-left: 4px solid #3498db; padding-left: 10px;">Experience</h2>
 
-  <h2 style="color: #2c3e50; margin-bottom: 10px;">Experience</h2>
-  <p style="margin-bottom: 2px;"><strong>Frontend Developer</strong> — ABC Tech</p>
-  <p style="margin-top: 0; color: gray;">Jan 2022 – Present</p>
-  <ul style="padding-left: 20px;">
-    <li>Built and maintained responsive web interfaces using React and Tailwind CSS.</li>
-    <li>Collaborated with backend developers and designers to improve UX and performance.</li>
-  </ul>
+    <div style="margin-top: 10px;">
+      <h3 style="margin-bottom: 5px;">Frontend Developer — <span style="color: #2980b9;">ABC Tech</span></h3>
+      <p style="margin: 0; color: gray;">Jan 2022 – Present</p>
+      <ul style="margin-top: 5px; padding-left: 20px;">
+        <li>Built responsive web interfaces using React and Tailwind CSS.</li>
+        <li>Improved performance by 30% through optimization strategies.</li>
+        <li>Worked closely with UI/UX teams to enhance accessibility.</li>
+      </ul>
+    </div>
 
-  <p style="margin-bottom: 2px;"><strong>Intern Web Developer</strong> — XYZ Solutions</p>
-  <p style="margin-top: 0; color: gray;">Jun 2021 – Dec 2021</p>
-  <ul style="padding-left: 20px;">
-    <li>Assisted in creating client websites and fixing bugs in existing applications.</li>
-    <li>Gained experience with agile development and Git version control.</li>
-  </ul>
+    <div style="margin-top: 20px;">
+      <h3 style="margin-bottom: 5px;">Web Developer Intern — <span style="color: #2980b9;">XYZ Solutions</span></h3>
+      <p style="margin: 0; color: gray;">Jun 2021 – Dec 2021</p>
+      <ul style="margin-top: 5px; padding-left: 20px;">
+        <li>Contributed to frontend development of 5+ client projects.</li>
+        <li>Fixed bugs, performed QA testing, and created documentation.</li>
+      </ul>
+    </div>
+  </section>
 
-  <h2 style="color: #2c3e50; margin-bottom: 10px;">Education</h2>
-  <p style="margin-bottom: 2px;"><strong>B.Sc. in Computer Science</strong> — University Name</p>
-  <p style="margin-top: 0; color: gray;">2017 – 2021</p>
+  <section style="margin-bottom: 30px;">
+    <h2 style="color: #2c3e50; font-size: 22px; border-left: 4px solid #3498db; padding-left: 10px;">Education</h2>
+    <p style="margin-top: 10px;"><strong>B.Sc. in Computer Science</strong><br/>
+    University Name, 2017 – 2021</p>
+  </section>
 
-  <h2 style="color: #2c3e50; margin-bottom: 10px;">Projects</h2>
-  <ul style="padding-left: 20px;">
-    <li><strong>Portfolio Website:</strong> Built a personal portfolio using React and hosted it on GitHub Pages.</li>
-    <li><strong>Task Manager App:</strong> Created a full-stack task manager with login/authentication features.</li>
-  </ul>
+  <section style="margin-bottom: 30px;">
+    <h2 style="color: #2c3e50; font-size: 22px; border-left: 4px solid #3498db; padding-left: 10px;">Projects</h2>
+    <ul style="padding-left: 20px; margin-top: 10px;">
+      <li><strong>Portfolio Website:</strong> Built a sleek personal portfolio using React, SCSS, and GitHub Pages.</li>
+      <li><strong>Task Manager App:</strong> Full-stack app with user authentication, built with MERN stack.</li>
+      <li><strong>Weather Dashboard:</strong> Real-time weather app using OpenWeather API and vanilla JS.</li>
+    </ul>
+  </section>
 
 </body>
 </html>
