--- a/uploads/template.html
+++ b/uploads/template.html
@@ -1,73 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Resume - John Doe</title>
+  <meta charset="UTF-8">
+  <title>Resume - {{user.full_name}}</title>
 </head>
-<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; max-width: 900px; margin: 40px auto; padding: 40px; background-color: #f9f9f9; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); color: #333;">
+<body style="font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; color: #333;">
 
-  <header style="text-align: center; margin-bottom: 30px;">
-    <h1 style="font-size: 36px; margin-bottom: 5px;">John Doe</h1>
-    <p style="font-size: 16px; color: #555; margin: 0;">john.doe@example.com | (123) 456-7890 | City, Country</p>
-    <hr style="margin-top: 20px; border: none; border-top: 2px solid #ddd;" />
-  </header>
+  <!-- Header -->
+  <h1 style="text-align: center; margin: 0;">{{user.full_name}}</h1>
+  <p style="text-align: center; font-size: 14px; color: gray;">
+    {{user.email}} | {{user.phone}} | {{user.location}}
+  </p>
 
-  <section style="margin-bottom: 30px;">
-    <h2 style="color: #2c3e50; font-size: 22px; border-left: 4px solid #3498db; padding-left: 10px;">Professional Summary</h2>
-    <p style="margin-top: 10px;">Detail-oriented and passionate Web Developer with 3+ years of experience in building responsive and accessible websites and applications. Strong background in modern JavaScript frameworks and full-stack development.</p>
-  </section>
+  <!-- Job Target -->
+  {{#if job_target.title}}
+    <h2 style="color: #0056b3; margin-top: 30px;">Target Role</h2>
+    <p><strong>{{job_target.title}}</strong> – {{job_target.description}}</p>
+  {{/if}}
 
-  <section style="margin-bottom: 30px;">
-    <h2 style="color: #2c3e50; font-size: 22px; border-left: 4px solid #3498db; padding-left: 10px;">Skills</h2>
-    <div style="display: flex; flex-wrap: wrap; gap: 15px; margin-top: 10px;">
-      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">HTML</span>
-      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">CSS</span>
-      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">JavaScript</span>
-      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">React</span>
-      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">Node.js</span>
-      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">MongoDB</span>
-      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">Git</span>
-      <span style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px;">Docker</span>
-    </div>
-  </section>
+  <!-- Summary -->
+  {{#if user.summary}}
+    <h2 style="color: #0056b3;">Summary</h2>
+    <p>{{user.summary}}</p>
+  {{/if}}
 
-  <section style="margin-bottom: 30px;">
-    <h2 style="color: #2c3e50; font-size: 22px; border-left: 4px solid #3498db; padding-left: 10px;">Experience</h2>
-
-    <div style="margin-top: 10px;">
-      <h3 style="margin-bottom: 5px;">Frontend Developer — <span style="color: #2980b9;">ABC Tech</span></h3>
-      <p style="margin: 0; color: gray;">Jan 2022 – Present</p>
-      <ul style="margin-top: 5px; padding-left: 20px;">
-        <li>Built responsive web interfaces using React and Tailwind CSS.</li>
-        <li>Improved performance by 30% through optimization strategies.</li>
-        <li>Worked closely with UI/UX teams to enhance accessibility.</li>
-      </ul>
-    </div>
-
-    <div style="margin-top: 20px;">
-      <h3 style="margin-bottom: 5px;">Web Developer Intern — <span style="color: #2980b9;">XYZ Solutions</span></h3>
-      <p style="margin: 0; color: gray;">Jun 2021 – Dec 2021</p>
-      <ul style="margin-top: 5px; padding-left: 20px;">
-        <li>Contributed to frontend development of 5+ client projects.</li>
-        <li>Fixed bugs, performed QA testing, and created documentation.</li>
-      </ul>
-    </div>
-  </section>
-
-  <section style="margin-bottom: 30px;">
-    <h2 style="color: #2c3e50; font-size: 22px; border-left: 4px solid #3498db; padding-left: 10px;">Education</h2>
-    <p style="margin-top: 10px;"><strong>B.Sc. in Computer Science</strong><br/>
-    University Name, 2017 – 2021</p>
-  </section>
-
-  <section style="margin-bottom: 30px;">
-    <h2 style="color: #2c3e50; font-size: 22px; border-left: 4px solid #3498db; padding-left: 10px;">Projects</h2>
-    <ul style="padding-left: 20px; margin-top: 10px;">
-      <li><strong>Portfolio Website:</strong> Built a sleek personal portfolio using React, SCSS, and GitHub Pages.</li>
-      <li><strong>Task Manager App:</strong> Full-stack app with user authentication, built with MERN stack.</li>
-      <li><strong>Weather Dashboard:</strong> Real-time weather app using OpenWeather API and vanilla JS.</li>
+  <!-- Skills -->
+  {{#if portfolio.skills.length}}
+    <h2 style="color: #0056b3;">Skills</h2>
+    <ul style="list-style: none; padding-left: 0; display: flex; flex-wrap: wrap; gap: 10px;">
+      {{#each portfolio.skills}}
+        <li style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px; font-size: 14px;">{{this}}</li>
+      {{/each}}
     </ul>
-  </section>
+  {{/if}}
+
+  <!-- Experience -->
+  {{#if portfolio.experience.length}}
+    <h2 style="color: #0056b3;">Experience</h2>
+    {{#each portfolio.experience}}
+      <div style="margin-bottom: 16px;">
+        <strong>{{position}}</strong> at {{company}} – {{location}}<br>
+        <em>{{start_date}} to {{end_date}}</em>
+        <p>{{description}}</p>
+      </div>
+    {{/each}}
+  {{/if}}
+
+  <!-- Education -->
+  {{#if portfolio.education.length}}
+    <h2 style="color: #0056b3;">Education</h2>
+    {{#each portfolio.education}}
+      <div style="margin-bottom: 12px;">
+        <strong>{{degree}}</strong> in {{field_of_study}}<br>
+        {{institution}} ({{start_date}} – {{end_date}}) | Grade: {{grade}}
+      </div>
+    {{/each}}
+  {{/if}}
+
+  <!-- Certifications -->
+  {{#if portfolio.certifications.length}}
+    <h2 style="color: #0056b3;">Certifications</h2>
+    {{#each portfolio.certifications}}
+      <p>
+        <strong>{{name}}</strong> by {{issuer}} ({{date}})
+        {{#if link}}<br><a href="{{link}}" style="font-size: 13px; color: #0056b3;">View Certificate</a>{{/if}}
+      </p>
+    {{/each}}
+  {{/if}}
+
+  <!-- Projects -->
+  {{#if portfolio.projects.length}}
+    <h2 style="color: #0056b3;">Projects</h2>
+    {{#each portfolio.projects}}
+      <div style="margin-bottom: 12px;">
+        <strong>{{title}}</strong><br>
+        <span>{{description}}</span><br>
+        <span><em>Tech Stack:</em> {{#each tech_stack}}{{this}}{{#unless @last}}, {{/unless}}{{/each}}</span><br>
+        {{#if link}}<a href="{{link}}" style="font-size: 13px; color: #0056b3;">Project Link</a>{{/if}}
+      </div>
+    {{/each}}
+  {{/if}}
+
+  <!-- Achievements -->
+  {{#if portfolio.achievements.length}}
+    <h2 style="color: #0056b3;">Achievements</h2>
+    <ul>
+      {{#each portfolio.achievements}}
+        <li>{{this}}</li>
+      {{/each}}
+    </ul>
+  {{/if}}
+
+  <!-- Languages -->
+  {{#if user.languages.length}}
+    <h2 style="color: #0056b3;">Languages</h2>
+    <ul style="display: flex; flex-wrap: wrap; gap: 12px; list-style: none; padding-left: 0;">
+      {{#each user.languages}}
+        <li style="background: #d9fce2; padding: 6px 12px; border-radius: 20px;">{{this}}</li>
+      {{/each}}
+    </ul>
+  {{/if}}
+
+  <!-- Interests -->
+  {{#if portfolio.interests.length}}
+    <h2 style="color: #0056b3;">Interests</h2>
+    <p>{{#each portfolio.interests}}{{this}}{{#unless @last}}, {{/unless}}{{/each}}</p>
+  {{/if}}
+
+  <!-- Social Links -->
+  {{#if portfolio.social_links}}
+    <h2 style="color: #0056b3;">Social Links</h2>
+    <ul style="list-style: none; padding-left: 0; font-size: 14px;">
+      {{#if portfolio.social_links.github}}<li>GitHub: {{portfolio.social_links.github}}</li>{{/if}}
+      {{#if portfolio.social_links.linkedin}}<li>LinkedIn: {{portfolio.social_links.linkedin}}</li>{{/if}}
+      {{#if portfolio.social_links.website}}<li>Website: {{portfolio.social_links.website}}</li>{{/if}}
+      {{#each portfolio.social_links.other}}
+        <li>{{this}}</li>
+      {{/each}}
+    </ul>
+  {{/if}}
 
 </body>
 </html>
