--- a/uploads/template.html
+++ b/uploads/template.html
@@ -1,124 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Resume - {{user.full_name}}</title>
+  <meta charset="UTF-8" />
+  <title>{{user.full_name}} - Resume</title>
 </head>
-<body style="font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; color: #333;">
+<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; padding: 40px; background: #fff; color: #333;">
 
-  <!-- Header -->
-  <h1 style="text-align: center; margin: 0;">{{user.full_name}}</h1>
-  <p style="text-align: center; font-size: 14px; color: gray;">
-    {{user.email}} | {{user.phone}} | {{user.location}}
-  </p>
+  <div style="max-width: 800px; margin: auto; padding: 30px; border: 1px solid #ddd; box-shadow: 0 0 8px rgba(0,0,0,0.05);">
 
-  <!-- Job Target -->
-  {{#if job_target.title}}
-    <h2 style="color: #0056b3; margin-top: 30px;">Target Role</h2>
-    <p><strong>{{job_target.title}}</strong> – {{job_target.description}}</p>
-  {{/if}}
+    <!-- Header -->
+    <div style="text-align: center; margin-bottom: 20px;">
+      <h1 style="margin-bottom: 5px; font-size: 32px;">{{user.full_name}}</h1>
+      <p style="margin: 0; font-size: 14px; color: #666;">{{user.email}} | {{user.phone}} | {{user.location}}</p>
+    </div>
 
-  <!-- Summary -->
-  {{#if user.summary}}
-    <h2 style="color: #0056b3;">Summary</h2>
-    <p>{{user.summary}}</p>
-  {{/if}}
+    <!-- Job Target -->
+    {{#if job_target.title}}
+      <h2 style="border-bottom: 1px solid #ccc; padding-bottom: 5px; margin-top: 30px;">Job Target</h2>
+      <p><strong>{{job_target.title}}</strong> — {{job_target.description}}</p>
+    {{/if}}
 
-  <!-- Skills -->
-  {{#if portfolio.skills.length}}
-    <h2 style="color: #0056b3;">Skills</h2>
-    <ul style="list-style: none; padding-left: 0; display: flex; flex-wrap: wrap; gap: 10px;">
-      {{#each portfolio.skills}}
-        <li style="background: #e8f0fe; padding: 6px 12px; border-radius: 20px; font-size: 14px;">{{this}}</li>
+    <!-- Summary -->
+    {{#if user.summary}}
+      <h2 style="border-bottom: 1px solid #ccc; padding-bottom: 5px;">Summary</h2>
+      <p>{{user.summary}}</p>
+    {{/if}}
+
+    <!-- Skills -->
+    {{#if portfolio.skills.length}}
+      <h2 style="border-bottom: 1px solid #ccc; padding-bottom: 5px;">Skills</h2>
+      <ul style="padding-left: 0; display: flex; flex-wrap: wrap; gap: 10px; list-style: none;">
+        {{#each portfolio.skills}}
+          <li style="background-color: #eef6fd; padding: 5px 12px; border-radius: 15px; font-size: 13px;">{{this}}</li>
+        {{/each}}
+      </ul>
+    {{/if}}
+
+    <!-- Experience -->
+    {{#if portfolio.experience.length}}
+      <h2 style="border-bottom: 1px solid #ccc; padding-bottom: 5px;">Experience</h2>
+      {{#each portfolio.experience}}
+        <div style="margin-bottom: 16px;">
+          <strong>{{position}}</strong>, {{company}} — <em>{{location}}</em><br />
+          <span style="font-size: 13px; color: #555;">{{start_date}} – {{end_date}}</span>
+          <p style="margin: 4px 0;">{{description}}</p>
+        </div>
       {{/each}}
-    </ul>
-  {{/if}}
+    {{/if}}
 
-  <!-- Experience -->
-  {{#if portfolio.experience.length}}
-    <h2 style="color: #0056b3;">Experience</h2>
-    {{#each portfolio.experience}}
-      <div style="margin-bottom: 16px;">
-        <strong>{{position}}</strong> at {{company}} – {{location}}<br>
-        <em>{{start_date}} to {{end_date}}</em>
-        <p>{{description}}</p>
-      </div>
-    {{/each}}
-  {{/if}}
-
-  <!-- Education -->
-  {{#if portfolio.education.length}}
-    <h2 style="color: #0056b3;">Education</h2>
-    {{#each portfolio.education}}
-      <div style="margin-bottom: 12px;">
-        <strong>{{degree}}</strong> in {{field_of_study}}<br>
-        {{institution}} ({{start_date}} – {{end_date}}) | Grade: {{grade}}
-      </div>
-    {{/each}}
-  {{/if}}
-
-  <!-- Certifications -->
-  {{#if portfolio.certifications.length}}
-    <h2 style="color: #0056b3;">Certifications</h2>
-    {{#each portfolio.certifications}}
-      <p>
-        <strong>{{name}}</strong> by {{issuer}} ({{date}})
-        {{#if link}}<br><a href="{{link}}" style="font-size: 13px; color: #0056b3;">View Certificate</a>{{/if}}
-      </p>
-    {{/each}}
-  {{/if}}
-
-  <!-- Projects -->
-  {{#if portfolio.projects.length}}
-    <h2 style="color: #0056b3;">Projects</h2>
-    {{#each portfolio.projects}}
-      <div style="margin-bottom: 12px;">
-        <strong>{{title}}</strong><br>
-        <span>{{description}}</span><br>
-        <span><em>Tech Stack:</em> {{#each tech_stack}}{{this}}{{#unless @last}}, {{/unless}}{{/each}}</span><br>
-        {{#if link}}<a href="{{link}}" style="font-size: 13px; color: #0056b3;">Project Link</a>{{/if}}
-      </div>
-    {{/each}}
-  {{/if}}
-
-  <!-- Achievements -->
-  {{#if portfolio.achievements.length}}
-    <h2 style="color: #0056b3;">Achievements</h2>
-    <ul>
-      {{#each portfolio.achievements}}
-        <li>{{this}}</li>
+    <!-- Education -->
+    {{#if portfolio.education.length}}
+      <h2 style="border-bottom: 1px solid #ccc; padding-bottom: 5px;">Education</h2>
+      {{#each portfolio.education}}
+        <div style="margin-bottom: 10px;">
+          <strong>{{degree}}</strong>, {{field_of_study}}<br />
+          {{institution}} ({{start_date}} – {{end_date}})<br />
+          <span style="font-size: 13px;">Grade: {{grade}}</span>
+        </div>
       {{/each}}
-    </ul>
-  {{/if}}
+    {{/if}}
 
-  <!-- Languages -->
-  {{#if user.languages.length}}
-    <h2 style="color: #0056b3;">Languages</h2>
-    <ul style="display: flex; flex-wrap: wrap; gap: 12px; list-style: none; padding-left: 0;">
-      {{#each user.languages}}
-        <li style="background: #d9fce2; padding: 6px 12px; border-radius: 20px;">{{this}}</li>
+    <!-- Certifications -->
+    {{#if portfolio.certifications.length}}
+      <h2 style="border-bottom: 1px solid #ccc; padding-bottom: 5px;">Certifications</h2>
+      {{#each portfolio.certifications}}
+        <p style="margin-bottom: 6px;">
+          <strong>{{name}}</strong> – {{issuer}}, {{date}}<br />
+          {{#if link}}<a href="{{link}}" style="font-size: 13px; color: #0077cc;">View Certificate</a>{{/if}}
+        </p>
       {{/each}}
-    </ul>
-  {{/if}}
+    {{/if}}
 
-  <!-- Interests -->
-  {{#if portfolio.interests.length}}
-    <h2 style="color: #0056b3;">Interests</h2>
-    <p>{{#each portfolio.interests}}{{this}}{{#unless @last}}, {{/unless}}{{/each}}</p>
-  {{/if}}
-
-  <!-- Social Links -->
-  {{#if portfolio.social_links}}
-    <h2 style="color: #0056b3;">Social Links</h2>
-    <ul style="list-style: none; padding-left: 0; font-size: 14px;">
-      {{#if portfolio.social_links.github}}<li>GitHub: {{portfolio.social_links.github}}</li>{{/if}}
-      {{#if portfolio.social_links.linkedin}}<li>LinkedIn: {{portfolio.social_links.linkedin}}</li>{{/if}}
-      {{#if portfolio.social_links.website}}<li>Website: {{portfolio.social_links.website}}</li>{{/if}}
-      {{#each portfolio.social_links.other}}
-        <li>{{this}}</li>
+    <!-- Projects -->
+    {{#if portfolio.projects.length}}
+      <h2 style="border-bottom: 1px solid #ccc; padding-bottom: 5px;">Projects</h2>
+      {{#each portfolio.projects}}
+        <div style="margin-bottom: 10px;">
+          <strong>{{title}}</strong><br />
+          <span>{{description}}</span><br />
+          <span style="font-size: 13px;"><em>Tech:</em> {{#each tech_stack}}{{this}}{{#unless @last}}, {{/unless}}{{/each}}</span><br />
+          {{#if link}}<a href="{{link}}" style="font-size: 13px; color: #0077cc;">View Project</a>{{/if}}
+        </div>
       {{/each}}
-    </ul>
-  {{/if}}
+    {{/if}}
+
+    <!-- Achievements -->
+    {{#if portfolio.achievements.length}}
+      <h2 style="border-bottom: 1px solid #ccc; padding-bottom: 5px;">Achievements</h2>
+      <ul>
+        {{#each portfolio.achievements}}
+          <li>{{this}}</li>
+        {{/each}}
+      </ul>
+    {{/if}}
+
+    <!-- Languages -->
+    {{#if user.languages.length}}
+      <h2 style="border-bottom: 1px solid #ccc; padding-bottom: 5px;">Languages</h2>
+      <ul style="display: flex; gap: 12px; list-style: none; padding-left: 0;">
+        {{#each user.languages}}
+          <li style="background: #d4f0d7; padding: 5px 12px; border-radius: 15px;">{{this}}</li>
+        {{/each}}
+      </ul>
+    {{/if}}
+
+    <!-- Interests -->
+    {{#if portfolio.interests.length}}
+      <h2 style="border-bottom: 1px solid #ccc; padding-bottom: 5px;">Interests</h2>
+      <p>{{#each portfolio.interests}}{{this}}{{#unless @last}}, {{/unless}}{{/each}}</p>
+    {{/if}}
+
+    <!-- Social Links -->
+    {{#if portfolio.social_links}}
+      <h2 style="border-bottom: 1px solid #ccc; padding-bottom: 5px;">Social Links</h2>
+      <ul style="list-style: none; padding-left: 0; font-size: 14px;">
+        {{#if portfolio.social_links.github}}<li>GitHub: {{portfolio.social_links.github}}</li>{{/if}}
+        {{#if portfolio.social_links.linkedin}}<li>LinkedIn: {{portfolio.social_links.linkedin}}</li>{{/if}}
+        {{#if portfolio.social_links.website}}<li>Website: {{portfolio.social_links.website}}</li>{{/if}}
+        {{#each portfolio.social_links.other}}<li>{{this}}</li>{{/each}}
+      </ul>
+    {{/if}}
+
+  </div>
 
 </body>
 </html>
